Corrected alignments

--- a/src/pages/profile/Profile.styles.css
+++ b/src/pages/profile/Profile.styles.css
@@ -26,7 +26,7 @@
   width: fit-content;
   background: transparent;
   border: none;
-  transform: translate(-150%, -40%);
+  transform: translate(-170%, -40%);
   caret-color: transparent;
 }
 
